--- a/Föreläsning 5/index.html
+++ b/Föreläsning 5/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Kodexempel</title>
-    
+    <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
   </head>
   <body>
     <main>
-      <h1>Beställ vår snygga t-shirt!</h1>
+      <h1>Beställ vår snygga t-shirt! <i class="fas fa-tshirt"></i></h1>
 
       <form>
         <div class="field">
@@ -58,8 +59,8 @@
           <input id="accept-terms" type="checkbox" required> <label for="accept-terms">Jag godkänner köpvillkoren</label>
         </div>
 
-        <button type="reset">Rensa</button>
-        <button type="submit">Skicka</button>
+        <button type="reset"><i class="fas fa-flushed"></i> Rensa</button>
+        <button type="submit"><i class="fas fa-shipping-fast"></i> Skicka</button>
 
       </form>
     </main>
