--- a/Föreläsning 8/kodexempel_1/index.html
+++ b/Föreläsning 8/kodexempel_1/index.html
@@ -12,8 +12,8 @@
                 <p>En paragraf....</p>
             </div>
             <div>
-                <h1 class="display-1">Ett tydligt budskap</h1>
-                <p class="lead mt-5">En säljande text... kanske med en intetsägande bild på någon/något....</p>
+                <h1>Ett tydligt budskap</h1>
+                <p>En säljande text... kanske med en intetsägande bild på någon/något....</p>
             </div>
         </main>
            
